<resources>
    <string name="app_name">NamazTime</string>
    <string name="push_channel_general_name">NamazTime mesajları</string>
    <string name="push_channel_general_description">Yeniliklər, vacib elanlar və tətbiq bildirişləri.</string>
    <string name="push_default_title">NamazTime</string>
    <string name="push_init_missing_config">Firebase push üçün google-services.json hələ əlavə olunmayıb.</string>
    <string name="nav_prayer">Namaz</string>
    <string name="nav_quran">Quran</string>
    <string name="nav_dua">Qibləgah</string>
    <string name="nav_qibla">Qibləgah</string>
    <string name="nav_notifications">Bildirişlər</string>
    <string name="nav_reminder">Xatırlatma</string>
    <string name="nav_timer">Digər</string>
    <string name="nav_settings">Ayarlar</string>
    <string name="notifications_center_intro">Namaz bildirişləri və app elanları burada saxlanılır.</string>
    <string name="notifications_center_empty">Hələ saxlanılmış bildiriş yoxdur.</string>
    <string name="notifications_center_clear_all">Hamısını sil</string>
    <string name="notifications_center_delete_one">Bildirişi sil</string>
    <string name="notifications_center_unread_count">%1$d yeni bildiriş</string>
    <string name="notifications_center_total_count">%1$d bildiriş</string>
    <string name="notifications_center_type_prayer">Namaz</string>
    <string name="notifications_center_type_announcement">Elan</string>
    <string name="notifications_center_type_general">Digər</string>
    <string name="notifications_center_cleared">Bütün bildirişlər silindi.</string>
    <string name="prayer_times_title">Namaz vaxtları</string>
    <string name="prayer_summary_title">Məkan</string>
    <string name="prayer_city_title">Namaz vaxtları - %1$s, %2$s</string>
    <string name="today_imsak_label">Bu günün imsak vaxtı</string>
    <string name="today_iftar_label">Bu günün iftar vaxtı</string>
    <string name="today_imsak_iftar_title">Bu günün imsak və iftar vaxtı</string>
    <string name="prayer_using_saved_city">%1$s, %2$s</string>
    <string name="prayer_no_city_selected">Şəhər seçilməyib.</string>
    <string name="prayer_settings_hint">Şəhər və reminder ayarları Ayarlar bölməsində idarə olunur.</string>
    <string name="prayer_refresh_button">Vaxtları yenilə</string>
    <string name="local_time_label">Yerli saat</string>
    <string name="gregorian_date_label">Bu gün</string>
    <string name="hijri_date_label">Hicri tarix</string>
    <string name="prayer_prev_day">Əvvəlki gün</string>
    <string name="prayer_next_day">Növbəti gün</string>
    <string name="prayer_today_button">Bu gün</string>
    <string name="prayer_selected_today">Bu gün</string>
    <string name="prayer_selected_yesterday">Dünən</string>
    <string name="prayer_selected_tomorrow">Sabah</string>
    <string name="prayer_selected_day_status">Seçilmiş gün</string>
    <string name="next_prayer_selected_day">%1$s üçün vaxtlar göstərilir</string>
    <string name="next_prayer_countdown">%1$s üçün %2$s qalıb</string>
    <string name="next_prayer_placeholder">Növbəti namaz vaxtı hesablanır</string>
    <string name="prayer_personal_done_with_name">%1$s, siz %2$s %3$s əvvəl qıldınız. %4$s üçün %5$s qalıb.</string>
    <string name="prayer_personal_done_no_name">Siz %1$s %2$s əvvəl qıldınız. %3$s üçün %4$s qalıb.</string>
    <string name="prayer_personal_pending_with_name">%1$s, %2$s qılmamısınız və ya qılındı deyə işarələməmisiniz. %3$s üçün %4$s qalıb.</string>
    <string name="prayer_personal_pending_no_name">%1$s qılmamısınız və ya qılındı deyə işarələməmisiniz. %2$s üçün %3$s qalıb.</string>
    <string name="prayer_personal_next_with_name">%1$s, növbəti namaz %2$s-dir. %3$s qalıb.</string>
    <string name="prayer_personal_next_no_name">Növbəti namaz %1$s-dir. %2$s qalıb.</string>
    <string name="prayer_personal_message_with_blessing">%1$s %2$s</string>
    <string name="prayer_personal_blessing_1">Allah ibadətinizi qəbul etsin.</string>
    <string name="prayer_personal_blessing_2">Rəbbim gününüzü xeyirli və bərəkətli etsin.</string>
    <string name="prayer_personal_blessing_3">Allah qəlbinizə rahatlıq versin.</string>
    <string name="prayer_relative_minutes">%1$d dəqiqə</string>
    <string name="prayer_relative_hours_minutes">%1$d saat %2$d dəqiqə</string>
    <string name="prayer_status_done">Namaz qılınıb</string>
    <string name="prayer_status_pending">Namaz qılınmayıb</string>
    <string name="prayer_status_upcoming">Hələ vaxtı çatmayıb</string>
    <string name="prayer_status_info">Namaz deyil</string>
    <string name="prayer_status_not_reached">Bu namazın vaxtı hələ çatmayıb.</string>
    <string name="city_input_hint">Şəhər</string>
    <string name="country_input_hint">Ölkə</string>
    <string name="fetch_prayer_times">Real vaxtları gətir</string>
    <string name="prayer_loading_idle">Vaxtlar seçilmiş məkana görə avtomatik yenilənir.</string>
    <string name="prayer_loading_in_progress">Namaz vaxtları yüklənir...</string>
    <string name="prayer_load_failed">Namaz vaxtları yüklənmədi. Şəhər və ölkə adını yoxlayın.</string>
    <string name="prayer_source_label">Mənbə: canlı API</string>
    <string name="quran_verses_title">Quran ayələri</string>
    <string name="audio_quran_title">Quran dinlə</string>
    <string name="quran_section_title">Quran</string>
    <string name="quran_section_subtitle">Aşağıdakı bölmələrdən birini seçin.</string>
    <string name="quran_read_tab">Kitab kimi oxu</string>
    <string name="quran_read_card_title">Quran kitabını oxu</string>
    <string name="quran_read_card_subtitle">Ayələri kitab kimi rahat oxuyun.</string>
    <string name="quran_audio_tab">Quran dinlə</string>
    <string name="quran_audio_card_subtitle">Surələri və ayələri səsli dinləyin.</string>
    <string name="quran_allah_names_tab">Allahın adları</string>
    <string name="quran_allah_names_card_subtitle">الرَّحْمَٰنُ الرَّحِيمُ</string>
    <string name="quran_read_hint">Ayələri kitab səhifəsi kimi oxuya bilərsiniz.</string>
    <string name="quran_audio_hint">Surə seçin.</string>
    <string name="quran_audio_loading">Quran dinlə bölməsi yüklənir...</string>
    <string name="quran_audio_backend_error">Quran dinlə bölməsi yüklənmədi.</string>
    <string name="quran_audio_demo_mode">Şəbəkə alınmadı. Müvəqqəti lokal audio göstərilir.</string>
    <string name="quran_audio_play_hint">Ayəyə toxunun, oxunuş başlasın.</string>
    <string name="quran_audio_select_sura_hint">Surə seçin.</string>
    <string name="quran_audio_ready_hint">Ayəni seçin və ya Quranı tam dinlə düyməsinə basın.</string>
    <string name="quran_audio_buffering">%1$s üçün audio hazırlanır...</string>
    <string name="quran_audio_playing">%1$s oxunur</string>
    <string name="quran_audio_finished">Surə tamamlandı.</string>
    <string name="quran_audio_play_error">Audio oxutmaq olmadı.</string>
    <string name="quran_audio_play_button">Quranı tam dinlə</string>
    <string name="quran_audio_play_button_downloaded">Yüklənən surələri dinlə</string>
    <string name="quran_audio_listen_button">Dinlə</string>
    <string name="quran_audio_download_button">Yüklə</string>
    <string name="quran_audio_delete_button">Sil</string>
    <string name="quran_audio_download_in_progress">Yüklənir...</string>
    <string name="quran_audio_download_ready">%1$s offline saxlanılıb</string>
    <string name="quran_audio_downloaded_label">Yüklənib</string>
    <string name="quran_audio_download_progress_template">%1$s / %2$s</string>
    <string name="quran_audio_offline_summary">Offline audio: %1$s</string>
    <string name="quran_audio_stream_only">Yalnız internetlə dinlənir</string>
    <string name="quran_audio_download_started">%1$s endirilir...</string>
    <string name="quran_audio_download_done">%1$s offline üçün hazırdır.</string>
    <string name="prayer_reminder_title">Namaz xatırlatması</string>
    <string name="reminder_loading">Qurulur...</string>
    <string name="reminder_prayers_label">Xatırlatma gələcək namazlar</string>
    <string name="settings_profile_section">İstifadəçi</string>
    <string name="settings_user_name_label">Adınız</string>
    <string name="settings_user_name_hint">Məsələn: Dilarə</string>
    <string name="settings_user_gender_label">Cinsiyyət</string>
    <string name="settings_birth_date_label">Doğum tarixi</string>
    <string name="settings_user_name_help">Ad, cins və yaş xatırlatma mətnlərini sizə daha uyğun müraciətlə göstərmək üçün istifadə olunur.</string>
    <string name="settings_appearance_section">Görünüş və rahatlıq</string>
    <string name="settings_appearance_summary">Şrift ölçüsü, görünüş rejimi və yaşlı istifadəçi rejimi.</string>
    <string name="settings_theme_label">Rəng rejimi</string>
    <string name="settings_font_size_label">Şrift ölçüsü</string>
    <string name="settings_elder_mode_label">Yaşlı istifadəçi rejimi</string>
    <string name="settings_elder_mode_help">Daha iri mətn və daha aydın elementlər tətbiq olunur.</string>
    <string name="settings_location_section">Məkan və namaz vaxtı mənbəyi</string>
    <string name="settings_location_summary_placeholder">Hazırkı şəhər, ölkə və namaz vaxtı mənbəyi burada görünür.</string>
    <string name="settings_reminder_section">Bildirişlər</string>
    <string name="settings_sound_section">Səs tənzimləmələri</string>
    <string name="settings_sound_help">Azan və ton səsini burada seç.</string>
    <string name="settings_sound_selected_placeholder">Seçilmiş azan burada görünür.</string>
    <string name="settings_tone_selected_placeholder">Seçilmiş ton burada görünür.</string>
    <string name="azan_sound_add_custom">Cihazdan azan səsi əlavə et</string>
    <string name="azan_sound_add_custom_help">MP3, M4A, OGG və bənzər audio faylları seçə bilərsiniz. Fayl ekranından qayıtmaq üçün telefonun geri hərəkətindən istifadə olunur.</string>
    <string name="azan_sound_remove_custom">Əlavə olunan səsi sil</string>
    <string name="settings_city_label">Şəhər</string>
    <string name="settings_country_label">Ölkə</string>
    <string name="settings_use_detected_fallback">Telefonun təxmin edilən məkanını istifadə et</string>
    <string name="settings_auto_location_label">Məkanı avtomatik yenilə</string>
    <string name="settings_auto_location_help">Aktiv olanda tətbiq şəhəri özü tapır. Söndürsəniz şəhəri əl ilə seçə bilərsiniz.</string>
    <string name="settings_prayer_source_label">Namaz vaxtı mənbəyi</string>
    <string name="settings_prayer_source_help_auto">Tövsiyə olunur. Azərbaycan üçün Qafqazislam, digər ölkələr üçün uyğun mənbə seçilir.</string>
    <string name="azan_sound_label">Azan səsi</string>
    <string name="signal_tone_choose_button">Sistemdən ton seç</string>
    <string name="test_azan_button">Azanı test et</string>
    <string name="test_tone_button">Tonu test et</string>
    <string name="stop_azan_button">Səsi dayandır</string>
    <string name="reminder_status_auto_location_on">Auto location: aktiv</string>
    <string name="feedback_share_button">Bizə yazın</string>
    <string name="feedback_dialog_hint">Gördüyünüz problemi, qarışıq qalan hissəni və ya təklifinizi burada yaza bilərsiniz.</string>
    <string name="feedback_contact_hint">Əlaqə məlumatı və ya adınız (istəyə bağlı)</string>
    <string name="feedback_message_hint">Mesajınızı yazın</string>
    <string name="privacy_title">Privacy</string>
    <string name="legacy_title">Legacy</string>
    <string name="advanced_title">Advanced</string>
    <string name="language_label">Tətbiq dili</string>
    <string name="prayer_name_fajr">Sübh namazı</string>
    <string name="prayer_name_sunrise">Gün çıxır</string>
    <string name="prayer_name_dhuhr">Zöhr namazı</string>
    <string name="prayer_name_asr">Əsr namazı</string>
    <string name="prayer_name_maghrib_iftar">Məğrib namazı</string>
    <string name="prayer_name_isha">İşa namazı</string>
</resources>